--- a/src/reki/README.org
+++ b/src/reki/README.org
@@ -1,6 +1,8 @@
-* reki
+#+TITLE: reki
+#+LANGUAGE: en
 
- Yes. Just another CLI tool to fetch system information. 
+[[./screenshot.png]]
+ Yet another CLI program to fetch system information.
 
 ** Installation
 
@@ -15,22 +17,6 @@ Have [[Leiningen][https://leiningen.org/]] installed in your machine and then ru
  #+end_src
  
 Shrimple as that.
-
-** Usage
-
-    $ java -jar reki-0.1.0-standalone.jar [args]
-
-** Options
-
-FIXME: listing of options this app accepts.
-
-** Examples
-
-...
-
-*** Bugs
-
-...
 
 ** License
 
